--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ scipy==0.19.1
 simplegeneric==0.8.1
 six==1.10.0
 sklearn==0.0
-tensorflow==1.2.1+computecanada
+tensorflow==1.2.1
 traitlets==4.3.2
 wcwidth==0.1.7
 Werkzeug==0.12.2
