--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,16 @@
-backports.weakref==1.0rc1
-bleach==1.5.0
+cycler==0.10.0
 decorator==4.1.2
-dill==0.2.7.1
-h5py==2.7.0
-html5lib==0.9999999
-ipython==6.1.0
-ipython-genutils==0.2.0
-jedi==0.10.2
 Keras==2.0.8
-Markdown==2.6.9
-multiprocess==0.70.5
-nibabel==2.1.0
-nilearn==0.3.1
-numpy==1.13.1
-pathos==0.2.1
-pexpect==4.2.1
-pickleshare==0.7.4
-pox==0.2.3
-ppft==1.6.4.7.1
-prompt-toolkit==1.0.15
-protobuf==3.4.0
-ptyprocess==0.5.2
-Pygments==2.2.0
+matplotlib==2.0.2
+networkx==2.0
+numpy==1.13.3
+olefile==0.44
+Pillow==4.3.0
+pyparsing==2.2.0
+python-dateutil==2.6.1
+pytz==2017.2
+PyWavelets==0.5.2
 PyYAML==3.12
-scikit-learn==0.19.0
+scikit-image==0.13.1
 scipy==0.19.1
-simplegeneric==0.8.1
-six==1.10.0
-sklearn==0.0
-tensorflow==1.2.1
-traitlets==4.3.2
-wcwidth==0.1.7
-Werkzeug==0.12.2
+six==1.11.0
